# cable_modem_monitor

./: .bandit  .claudeignore  .dockerignore  .flake8  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlint.jsonc  .pre-commit-config.yaml  .ruff.toml  .semgrep.yml  AI_CONTEXT.md  ATTRIBUTION.md  BRANDS_SUBMISSION.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  GOVERNANCE.md  HACS_SUBMISSION_GUIDE.md  LICENSE  LINTING_STATUS.md  MODEM_COMPATIBILITY_GUIDE.md  Makefile  PLAN.md  PROMOTION_PLAN.md  PROMOTION_TEMPLATES.md  QUICKSTART.md  README.md  READY_FOR_HACS.md  RESPONSE_TEMPLATES.md  SCRIPT_REVIEW_REPORT.md  SECURITY.md  SECURITY_FIXES_SUMMARY.md  SUBMISSION_GUIDE.md  TESTING.md  TROUBLESHOOTING.md  UPGRADE_SUMMARY.md  (+19 more)
.claude/: settings.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh  post-start.sh  setup.sh
.github/: CODEOWNERS  DEVELOPMENT.md  ISSUE_SMART_POLLING_SENSOR.md  README.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  modem_request.yml  modem_verification.yml
.github/codeql/: README.md  codeql-config.yml
.github/workflows/: changelog-check.yml  check-commit-email.yml  codeql.yml  commit-lint.yml  devcontainer.yml  hassfest.yml  publish.yml  release.yml  tests.yml  validate.yaml
ai-skills/: issue-to-fixture.md  mock-server.md  modem-request-replies.md  modem-request-triage.md
cable-modem-monitor-ql/: README.md  qlpack.yml
cable-modem-monitor-ql/queries/: no_timeout.ql
custom_components/cable_modem_monitor/: __init__.py  button.py  channel_bond_notifier.py  channel_bond_storage.py  channel_utils.py  config_flow.py  config_flow_helpers.py  const.py  coordinator.py  dev_tools.py  diagnostics.py  entity_reconciliation.py  entity_registry_helpers.py  integration_manager.py  manifest.json  mapping_manager.py  modem_scraper.py  registry_cleanup.py  sensor.py  services.py  services.yaml  strings.json  utils.py
docs/: ADDING_NEW_PARSER.md  ARCHITECTURE.md  ARCHITECTURE_ROADMAP.md  ATTRIBUTION.md  BRANCH_PROTECTION.md  CAPTURE_GUIDE.md  CM600_USER_INSTRUCTIONS.md  CODEQL_OVERVIEW.md  CODEQL_TESTING_GUIDE.md  CODE_REVIEW.md  CROSS_PLATFORM_SUPPORT.md  DESIGN_IMPROVEMENTS.md  DEVELOPER_QUICKSTART.md  DOCUMENTATION_CONSOLIDATION.md  EXAMPLES.md  FIXTURE_REQUIREMENTS.md  GETTING_STARTED.md  HAR_CAPTURE_GUIDE.md  HTML_CAPTURE_GUIDE.md  IMPLEMENTATION_PLAN_PARSER_VALIDATION.md  INTAKE_PIPELINE.md  LICENSE_AND_COMPARISON_ANALYSIS.md  LINTING.md  LOCAL_ENVIRONMENT_SETUP.md  MODEM_COMPATIBILITY_GUIDE.md  MODEM_EXPANSION_QUICKSTART.md  MODEM_REQUEST.md  PHASE_0_PREP_SUMMARY.md  PHASE_1_2_3_IMPLEMENTATION_SUMMARY.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE_RECOMMENDATIONS.md  README.md  RELEASING.md  RESEARCH_SIMILAR_PROJECTS.md  SECURITY_LINTING.md  SESSION_IMPROVEMENTS_SUMMARY.md  SETUP_FRICTION_POINTS.md  TESTING.md  TESTING_ON_HA.md  TEST_COVERAGE_SUMMARY.md  (+7 more)
docs/archive/: ARCHITECTURE_ROADMAP_v3.2.0_FULL.md  DEVELOPMENT_ENVIRONMENT_GUIDE.md  MODEM_EXPANSION_PLAN.md  WORKSPACE_VS_CONTAINER.md
docs/examples/: manual-dashboard.yaml
docs/feature_requests/: README.md  html_capture_diagnostics.md  phase_4_json_configs.md  phase_5_community_platform.md  smart_polling_sensor.md
docs/plans/: PLAN_PHASE1_SCHEMAS.md  PLAN_PHASE2_AUTH.md  PLAN_PHASE3_ARCHITECTURE.md  PLAN_PHASE4_PARSERS.md  PLAN_PHASE5_DOCS.md  README.md  har-parser-validation.md  v3.13.0-discovery-cleanup.md
docs/reference/: ARCHITECTURE.md  CODEQL_SECURITY.md  CODEQL_TESTING_GUIDE.md  DISCOVERY_IMPLEMENTATION_PLAN.md  FIXTURE_FORMAT.md  LINTING.md  MODEM_LANDSCAPE.md  PARSER_GUIDE.md  RELEASING.md  TECH_DEBT.md  TESTING.md
docs/setup/: CROSS_PLATFORM_SUPPORT.md  DEVCONTAINER.md  GETTING_STARTED.md  PLATFORM_SUPPORT.md  TESTING_ON_HA.md  TESTING_VIA_HACS.md  WSL2_SETUP.md
docs/specs/: MODEM_DIRECTORY_SPEC.md  MODEM_YAML_SPEC.md
modems/: README.md  __init__.py  conftest.py
modems/arris/: README.md  __init__.py
modems/compal/: README.md  __init__.py
modems/motorola/: README.md  __init__.py
modems/netgear/: README.md  __init__.py
modems/technicolor/: README.md  __init__.py
modems/virgin/: README.md  __init__.py
scripts/: README.md  capture_modem.py  catalog_reference.py  check_auto_close_keywords.py  check_fixture_pii.py  check_ha_compat.py  check_markdown_links.py  check_owned_deps.py  check_suppression_discipline.py  ci-check.sh  deploy_updates.sh  extract_fixtures.py  generate_catalog_index.py  generate_fixture_index.py  generate_modem_index.py  generate_test_docs.py  har_auth_extractor.py  mock_modem.py  mock_server.py  poc_legacy_ssl.py  quick_test.sh  release.py  sanitize_har.py  security-scan.sh  setup.ps1  setup.py  setup.sh  test_mock_modem.py  test_simple.sh  update_versions.py  validate_har_secrets.py  validate_modem_configs.py  verify-ci.sh  verify-setup.sh  wsl-setup.sh
scripts/data/: providers.json
scripts/dev/: README_HOOKS.md  activate_venv.ps1  activate_venv.sh  analyze_logs.py  bootstrap_env.sh  check-commit-email.sh  check-docker.py  check-fixture-pii.py  check-local-path-refs.sh  check-translations-sync.py  cleanup_test_artifacts.py  commit.sh  docker-dev.sh  fresh-start.ps1  fresh-start.sh  fresh_start.py  ha-cleanup.sh  ha-entrypoint.sh  ha-reload.py  ha-start.py  ha-sync-run.py  lint.ps1  lint.sh  list-supported-modems.py  next_steps.txt  quick_test.sh  run-python.sh  run_tests_local.sh  setup-git-email.sh  setup_env.sh  setup_vscode_testing.ps1  sync-modem-configs.sh  validate.py  (+6 more)
skills/: ha-safe-deps-bump.md  mock-server.md  modem-confirm.md  modem-intake.md  soak-analysis.md
tests/: README.md  TESTS.md  TEST_METRICS.md  conftest.py  fixtures.py  requirements.txt  run_tests.py  test_auth.py  test_button.py  test_config_flow.py  test_coordinator.py  test_modem_scraper.py  test_parser_arris_sb6141.py  test_parser_motorola_mb.py  test_parser_motorola_mb7621.py  test_parser_technicolor_tc4400.py  test_parser_technicolor_xb7.py  test_sensor.py
tools/: capture_modem_html.py
(+838 files in other folders)
