# pyproject.toml
# This file defines formatting, linting, type-checking, and test configuration
# for development consistency across the cable-modem-monitor project.

[project]
name = "cable-modem-monitor"
version = "0.1.0"
description = "Monitor and analyze cable modem metrics with Home Assistant integration."
readme = "README.md"
requires-python = ">=3.12,<3.13"  # Pin to Python 3.12 for compatibility and reproducibility

dependencies = [
    # Runtime dependencies
    "requests>=2.31",     # HTTP client for modem polling
    "pydantic>=2.0",      # Data validation and modeling
]

[project.optional-dependencies]
dev = [
    # Development tools
    "black>=24.0",        # Code formatter
    "ruff>=0.5.0",        # Linter and import sorter
    "mypy>=1.10",         # Static type checker
    "pytest>=8.0",        # Test runner
    "pytest-cov>=5.0",    # Coverage reporting
]

# -------------------------------
# Black (code formatter)
# -------------------------------
[tool.black]
line-length = 120                  # Match Ruff and improve readability
target-version = ['py312']         # Align with runtime Python version
include = '\.pyi?$'                # Format .py and .pyi files
extend-exclude = '''
/(
  tests/.*\.html                   # Exclude test HTML fixture files
)/
'''

# -------------------------------
# Ruff (linter + import sorter)
# -------------------------------
[tool.ruff]
line-length = 120                  # Match Black line length
target-version = "py312"           # Align with runtime
exclude = [
    "tests/**/*.html",             # Ignore test fixtures
    "__pycache__",                 # Skip Python cache
    ".venv", "venv",               # Ignore virtual environments
    ".git",                        # Skip Git metadata
]

[tool.ruff.lint]
select = [
    "E", "F", "W", "C90", "I", "UP", "B", "SIM", "TID", "N"
]  # Enable key rule categories: style, complexity, import sorting, modern syntax

ignore = [
    "B008",   # Allow function calls in default args (common in HA)
    "B904",   # Allow bare `raise` for re-raising
    "SIM108", # Avoid forced ternary expressions
    "TID252", # Allow relative imports in HA custom components
]

[tool.ruff.lint.mccabe]
max-complexity = 10                # Keep functions readable

[tool.ruff.lint.isort]
known-first-party = ["custom_components.cable_modem_monitor"]  # Treat integration code as first-party
split-on-trailing-comma = true
force-wrap-aliases = true
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]           # Allow unused imports for package exposure
"tests/**/*.py" = ["B011", "S101"] # Allow assert and safe eval in tests
"scripts/**/*.py" = ["T201"]       # Allow print statements in scripts

[tool.ruff.lint.flake8-type-checking]
strict = false                     # Avoid strict import enforcement for type-checking

# -------------------------------
# Mypy (static type checker)
# -------------------------------
[tool.mypy]
python_version = "3.12"            # Match runtime
warn_return_any = true             # Catch overly permissive return types
warn_unused_configs = true         # Alert on unused mypy settings
disallow_untyped_defs = true       # Enforce type hints on all function definitions
ignore_missing_imports = true      # Avoid errors for missing stubs

files = ["custom_components/cable_modem_monitor/**/*.py"]  # Limit scope to integration code

# -------------------------------
# Pytest (test runner)
# -------------------------------
[tool.pytest.ini_options]
minversion = "8.0"                 # Ensure compatibility with latest plugins
addopts = "-v --tb=short --cov=custom_components.cable_modem_monitor --cov-report=term-missing"
testpaths = [
    "tests"                        # Discover tests in this folder
]

# -------------------------------
# Note: mypy configuration moved from mypy.ini to pyproject.toml
# See [tool.mypy] section above for type checking settings
# pytest.ini has been deprecated - all settings now in pyproject.toml
# -------------------------------
