***REMOVED*** pyproject.toml
***REMOVED*** This file defines formatting, linting, type-checking, and test configuration
***REMOVED*** for development consistency across the cable-modem-monitor project.

[project]
name = "cable-modem-monitor"
version = "0.1.0"
description = "Monitor and analyze cable modem metrics with Home Assistant integration."
readme = "README.md"
requires-python = ">=3.12,<3.13"  ***REMOVED*** Pin to Python 3.12 for compatibility and reproducibility

dependencies = [
    ***REMOVED*** Runtime dependencies
    "requests>=2.31",     ***REMOVED*** HTTP client for modem polling
    "pydantic>=2.0",      ***REMOVED*** Data validation and modeling
]

[project.optional-dependencies]
dev = [
    ***REMOVED*** Development tools
    "black>=24.0",        ***REMOVED*** Code formatter
    "ruff>=0.5.0",        ***REMOVED*** Linter and import sorter
    "mypy>=1.10",         ***REMOVED*** Static type checker
    "pytest>=8.0",        ***REMOVED*** Test runner
    "pytest-cov>=5.0",    ***REMOVED*** Coverage reporting
]

***REMOVED*** -------------------------------
***REMOVED*** Black (code formatter)
***REMOVED*** -------------------------------
[tool.black]
line-length = 120                  ***REMOVED*** Match Ruff and improve readability
target-version = ['py312']         ***REMOVED*** Align with runtime Python version
include = '\.pyi?$'                ***REMOVED*** Format .py and .pyi files
extend-exclude = '''
/(
  tests/.*\.html                   ***REMOVED*** Exclude test HTML fixture files
)/
'''

***REMOVED*** -------------------------------
***REMOVED*** Ruff (linter + import sorter)
***REMOVED*** -------------------------------
[tool.ruff]
line-length = 120                  ***REMOVED*** Match Black line length
target-version = "py312"           ***REMOVED*** Align with runtime
exclude = [
    "tests/**/*.html",             ***REMOVED*** Ignore test fixtures
    "__pycache__",                 ***REMOVED*** Skip Python cache
    ".venv", "venv",               ***REMOVED*** Ignore virtual environments
    ".git",                        ***REMOVED*** Skip Git metadata
]

[tool.ruff.lint]
select = [
    "E", "F", "W", "C90", "I", "UP", "B", "SIM", "TID", "N",
    "PLC",    ***REMOVED*** pylint convention (catches useless imports, etc.)
    "PLE",    ***REMOVED*** pylint errors
    "PLW",    ***REMOVED*** pylint warnings (catches self-assignment, redeclared names)
]  ***REMOVED*** Enable key rule categories: style, complexity, import sorting, modern syntax
***REMOVED*** Note: F841 (unused variables) is already included via "F" (Pyflakes)
***REMOVED*** Note: ERA (commented-out code) disabled - too aggressive, flags format docs like "***REMOVED*** cells[0] = Channel"
***REMOVED*** Note: Inline imports (imports inside functions) not caught by ruff - use CodeQL for that

ignore = [
    "B008",     ***REMOVED*** Allow function calls in default args (common in HA)
    "B904",     ***REMOVED*** Allow bare `raise` for re-raising
    "SIM108",   ***REMOVED*** Avoid forced ternary expressions
    "TID252",   ***REMOVED*** Allow relative imports in HA custom components
    "PLW0603",  ***REMOVED*** Allow global statement updates (used for caching)
    "PLC0415",  ***REMOVED*** Allow imports inside functions (lazy loading for HA performance)
]

[tool.ruff.lint.mccabe]
max-complexity = 10                ***REMOVED*** Keep functions readable

[tool.ruff.lint.isort]
known-first-party = ["custom_components.cable_modem_monitor"]  ***REMOVED*** Treat integration code as first-party
split-on-trailing-comma = true
force-wrap-aliases = true
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]           ***REMOVED*** Allow unused imports for package exposure
"tests/**/*.py" = ["B011", "S101"] ***REMOVED*** Allow assert and safe eval in tests
"scripts/**/*.py" = [
    "T201",     ***REMOVED*** Allow print statements
    "PLW1510",  ***REMOVED*** Allow subprocess.run without check (dev scripts handle errors manually)
    "PLC0206",  ***REMOVED*** Allow dict iteration without .items() (readability preference)
    "PLE0704",  ***REMOVED*** Allow bare raise in cleanup handlers
]

[tool.ruff.lint.flake8-type-checking]
strict = false                     ***REMOVED*** Avoid strict import enforcement for type-checking

***REMOVED*** -------------------------------
***REMOVED*** Mypy (static type checker)
***REMOVED*** -------------------------------
[tool.mypy]
python_version = "3.12"            ***REMOVED*** Match runtime
warn_return_any = true             ***REMOVED*** Catch overly permissive return types
warn_unused_configs = true         ***REMOVED*** Alert on unused mypy settings
disallow_untyped_defs = true       ***REMOVED*** Enforce type hints on all function definitions
ignore_missing_imports = true      ***REMOVED*** Avoid errors for missing stubs

files = ["custom_components/cable_modem_monitor/**/*.py"]  ***REMOVED*** Limit scope to integration code

***REMOVED*** -------------------------------
***REMOVED*** Pytest (test runner)
***REMOVED*** -------------------------------
[tool.pytest.ini_options]
minversion = "8.0"                 ***REMOVED*** Ensure compatibility with latest plugins
addopts = "-v --tb=short --cov=custom_components.cable_modem_monitor --cov-report=term-missing"
testpaths = [
    "tests"                        ***REMOVED*** Discover tests in this folder
]

***REMOVED*** -------------------------------
***REMOVED*** Note: mypy configuration moved from mypy.ini to pyproject.toml
***REMOVED*** See [tool.mypy] section above for type checking settings
***REMOVED*** pytest.ini has been deprecated - all settings now in pyproject.toml
***REMOVED*** -------------------------------
